--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>&#128157; Quà tặng em</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="http://lmpixels.com/demo/ourlove/our-love-responsive-wedding-template-red/favicon.ico">
+    <link rel="shortcut icon"
+        href="http://lmpixels.com/demo/ourlove/our-love-responsive-wedding-template-red/favicon.ico">
 
     <!-- META TAGS -->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -21,10 +22,11 @@
     <link rel="stylesheet" href="css/couple.css" type="text/css" />
     <link rel="stylesheet" href="css/bg2.css" type="text/css" />
     <link rel="stylesheet" href="css/authors.css" type="text/css" />
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
 
     <!-- DO NOT MOVE THIS CODE LINE OUTSIDE <HEAD> TAG -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 
     <style type="text/css">
         #section1 img {
@@ -43,20 +45,22 @@
     <!-- SET BACKGROUND FOR PAGES -->
 
     <script type="text/javascript">
-        $(document).ready(function() {
+        $(document).ready(function () {
             $('#pagepiling').pagepiling({
                 direction: 'horizontal',
                 menu: '#menu',
                 anchors: ['main', 'intro', 'gallery', 'game', 'about'],
-                sectionsColor: ['url("http://i.imgur.com/jtjYUVr.png")', 'white', 'url("img/bg.jpeg")', 'url("img/bg4.png")', '#212121'],
+                sectionsColor: ['url("http://i.imgur.com/jtjYUVr.png")', 'white', 'url("img/bg.jpeg")',
+                    'url("img/bg4.png")', '#212121'
+                ],
                 navigation: {
                     'position': 'right',
                     'tooltips': ['Main Page', 'Intro Page', 'Gallery Page', 'Game', 'About Source Code']
                 },
-                afterRender: function() {
+                afterRender: function () {
                     $('#pp-nav').addClass('custom');
                 },
-                afterLoad: function(anchorLink, index) {
+                afterLoad: function (anchorLink, index) {
                     if (index > 1) {
                         $('#pp-nav').removeClass('custom');
                     } else {
@@ -89,7 +93,7 @@
         <!-- CONTENT 1 / Sinh nhật PAGE -->
         <div class="section" id="section1">
             <script>
-                document.addEventListener('DOMContentLoaded', function() {
+                document.addEventListener('DOMContentLoaded', function () {
 
                     Typed.new("#typed", {
                         stringsElement: document.getElementById('typed-strings'),
@@ -99,36 +103,38 @@
                         contentType: 'html', // or text
                         // defaults to null for infinite loop
                         loopCount: null,
-                        callback: function() {
+                        callback: function () {
                             foo();
                         },
-                        resetCallback: function() {
+                        resetCallback: function () {
                             newTyped();
                         }
                     });
 
                     var resetElement = document.querySelector('.reset');
                     if (resetElement) {
-                        resetElement.addEventListener('click', function() {
+                        resetElement.addEventListener('click', function () {
                             document.getElementById('typed')._typed.reset();
                         });
                     }
 
                 });
 
-                function newTyped() { /* A new typed object */ }
+                function newTyped() {
+                    /* A new typed object */ }
 
                 function foo() {
                     console.log("Callback");
                 }
             </script>
 
-            <div class="content-1" style="margin-bottom:150px;width:100%; height: 80%"><img src='img/cake_PNG13114.png' alt='For My Love' height="100%" />
-                 <div class="tree">
-                    <img src="img/tree.png" alt=""> 
+            <div class="content-1" style="margin-bottom:150px;width:100%; height: 80%"><img src='img/cake_PNG13114.png'
+                    alt='For My Love' height="100%" />
+                <div class="tree">
+                    <img src="img/tree.png" alt="">
                     <p style="font-size: 20px; color: #ff0066">CHÚC VỢ YÊU SINH NHẬT VUI VẺ NHA 💋</p>
                 </div>
-                <br />            
+                <br />
             </div>
         </div>
 
@@ -138,110 +144,108 @@
         <div class="section">
             <!-- VIDEO BACKGROUND -->
             <div class="video-background">
-                <!-- nền của trang 2 -->
-                <div class="video-foreground"">
-                   <div id="color"></div>
-                </div>
             </div>
 
-            <style>
-                .clearfix:after,
+        <style>
+            .clearfix:after,
                 {
-                    clear: both;
-                }
+                clear: both;
+            }
 
-                .couple {
-                    width: 70%;
-                }
-            </style>
+            .couple {
+                width: 70%;
+            }
+        </style>
 
-            <!-- COUPLE -->
-            <center>
-                <div class="couple clearfix">
-                    <div class="couple-block first-block">
-                        <div class="top-block">
-                            <div class="name">
-                                <!-- Nam -->
-                                <h2 class="male">Chồng</h2>
-                                <p></p>
-                            </div>
-
-                            <div class="photo">
-                                <img src="img/authors/author.jpg" alt="" width="120" height="110">
-                            </div>
-                        </div>
-                        <!-- Mổ tả -->
-                        <div class="bottom-block" style="font-size:16px">
+        <!-- COUPLE -->
+        <center>
+            <div class="couple clearfix">
+                <div class="couple-block first-block">
+                    <div class="top-block">
+                        <div class="name">
+                            <!-- Nam -->
+                            <h2 class="male">Chồng</h2>
                             <p></p>
                         </div>
-                    </div>
 
-                    <div class="heart" style="margin-bottom:-100px">
-                        <img id="heart" src="img/heart_couple.png" alt="">
+                        <div class="photo">
+                            <img src="img/authors/author.jpg" alt="" width="120" height="110">
+                        </div>
                     </div>
-
-                    <div class="couple-block second-block">
-                        <div class="top-block">
-                            <div class="name">
-                                <!-- nữ -->
-                                <h2 class="female">Vợ Yêu</h2>
-                            </div>
-                            <div class="photo">
-                                <img src="img/authors/vo_yeu.jpg" width="110px" height="110px" width="100" height="100">
-                            </div>
-                        </div>
-                        <div class="bottom-block" style="font-size:16px">
-                            <p></p>
-                        </div>
+                    <!-- Mổ tả -->
+                    <div class="bottom-block" style="font-size:16px">
+                        <p></p>
                     </div>
                 </div>
 
-                <!-- COUNT UP -->
-                <div id="center"></div>
-                <div id="TextCounter" style="color:white;background:url('img/tiny_heart.gif');"><strong>Đã</strong> <span id="counter">
-            <script type="text/javascript">
-                // January: tháng 1
-                // February: tháng 2
-                // March: tháng 3
-                // April: tháng 4
-                // May: tháng 5
-                // June: tháng 6
-                // July: tháng 7
-                // August: tháng 8
-                // September: tháng 9
-                // October: tháng 10
-                // November: tháng 11
-                // December: tháng 12
-
-                // ************* Ngày gặp nhau *************
-                new CountUp('February 27 2020 8:00:00', 'counter', "");
-            </script>
-        </span><strong>Kể từ ngày mình yêu nhau</strong>
+                <div class="heart" style="margin-bottom:-100px">
+                    <img id="heart" src="img/heart_couple.png" alt="">
                 </div>
-                <a href="#gallery">
-                    <h1 style="color:white" id="muiten">&#10165;</h1>
-                </a>
-                <i id="click">Click để xem tiếp</i>
-            </center>
-        </div>
 
-        <!-- CONTENT 3 / Dòng Thời gian -->
-        <div class="section" id="section3">
-            <div class="intro">
-                <iframe style="border:none;width:100%;height:100vh" src="gallery.html"></iframe>
-
+                <div class="couple-block second-block">
+                    <div class="top-block">
+                        <div class="name">
+                            <!-- nữ -->
+                            <h2 class="female">Vợ Yêu</h2>
+                        </div>
+                        <div class="photo">
+                            <img src="img/authors/vo_yeu.jpg" width="110px" height="110px" width="100" height="100">
+                        </div>
+                    </div>
+                    <div class="bottom-block" style="font-size:16px">
+                        <p></p>
+                    </div>
+                </div>
             </div>
+
+            <!-- COUNT UP -->
+            <div id="center"></div>
+            <div id="TextCounter" style="color:white;background:url('img/tiny_heart.gif');"><strong>Đã</strong> <span
+                    id="counter">
+                    <script type="text/javascript">
+                        // January: tháng 1
+                        // February: tháng 2
+                        // March: tháng 3
+                        // April: tháng 4
+                        // May: tháng 5
+                        // June: tháng 6
+                        // July: tháng 7
+                        // August: tháng 8
+                        // September: tháng 9
+                        // October: tháng 10
+                        // November: tháng 11
+                        // December: tháng 12
+
+                        // ************* Ngày gặp nhau *************
+                        new CountUp('February 27 2020 8:00:00', 'counter', "");
+                    </script>
+                </span><strong>Kể từ ngày mình yêu nhau</strong>
+            </div>
+            <a href="#gallery">
+                <h1 style="color:white" id="muiten">&#10165;</h1>
+            </a>
+            <i id="click">Click để xem tiếp</i>
+        </center>
+    </div>
+
+    <!-- CONTENT 3 / Dòng Thời gian -->
+    <div class="section" id="section3">
+        <div class="intro">
+            <iframe style="border:none;width:100%;height:100vh" src="gallery.html"></iframe>
+
         </div>
     </div>
-    <!--Style-->    
-    
+    </div>
+    <!--Style-->
+
     <!--EndStyle-->
-    
+
 
     <!-- BACKGROUND MUSIC -->
     <!-- thay đổi nhạc nền -->
 
-<iframe id="music" src="https://www.nhaccuatui.com/mh/auto/pcXEQ2tcP6oM" width="1" height="1" frameborder="0" allowfullscreen allow="autoplay"></iframe>
+    <iframe id="music" src="https://www.nhaccuatui.com/mh/auto/pcXEQ2tcP6oM" width="1" height="1" frameborder="0"
+        allowfullscreen allow="autoplay"></iframe>
     <!-- Javascripts -->
     <script src="js/main.js"></script>
     <script type="text/javascript" src="js/jquery.pagepiling.js"></script>
