--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     alt='For My Love' height="100%" />
                 <div class="tree">
                     <img src="img/tree.png" alt="">
-                    <p style="font-size: 20px; color: #ff0066">CHÚC VỢ YÊU SINH NHẬT VUI VẺ NHA 💋</p>
+                    <p style="font-size: 20px; color: #ff0066">CHÚC VỢ YÊU SINH NHẬT VUI VẺ 💋</p>                    
                 </div>
                 <br />
             </div>
@@ -165,7 +165,7 @@
                         <div class="name">
                             <!-- Nam -->
                             <h2 class="male">Chồng</h2>
-                            <p></p>
+                            <p>Người luôn yêu thương và trân trọng và luôn mong muốn vợ sẽ được hạnh phúc</p>
                         </div>
 
                         <div class="photo">
@@ -187,6 +187,7 @@
                         <div class="name">
                             <!-- nữ -->
                             <h2 class="female">Vợ Yêu</h2>
+                            <p>Người con gái mạnh mẽ, thông minh, xinh đẹp mà chồng sẽ yêu thương suốt cuộc đời này</p>
                         </div>
                         <div class="photo">
                             <img src="img/authors/vo_yeu.jpg" width="110px" height="110px" width="100" height="100">
