--- a/gallery.html
+++ b/gallery.html
@@ -31,7 +31,7 @@
 				<figcaption>
 					<h2 class="photostack-title"></h2>
 					<div class="photostack-back">
-						<p>Dù có bão táp phong ba thế nào, chỉ cần vợ ở bên chồng là đủ 😍</p>
+						<p>Chúc vợ yêu của chồng sẽ luôn xinh đẹp, tươi trẻ, tự tin vào bản thân và kiên trì theo đuổi những mục tiêu của mình vợ nhé ❤️ </p>
 					</div>
 				</figcaption>
 			</figure>
@@ -40,7 +40,7 @@
 				<figcaption>
 					<h2 class="photostack-title"></h2>
 					<div class="photostack-back">
-						<p>Dù có sóng gió khó khăn thế nào chồng sẽ cùng vợ vượt qua nha 😍</p>
+						<p>Và dù có sóng gió như thế nào thì chồng sẽ cùng vợ vượt qua nha 😍</p>
 					</div>
 				</figcaption>
 			</figure>
@@ -49,7 +49,9 @@
 				<figcaption>
 					<h2 class="photostack-title"></h2>
 					<div class="photostack-back">
-						<p>Bình yên là khi được ở bên lắng nghe và chia sẻ cùng vợ 😍</p>
+						<p>Điều quan trọng là cả chồng và vợ đều tin tưởng lẫn nhau và chia sẻ để cùng vượt qua thử thách
+							.Hi vọng mình sẽ cùng nắm tay nhau đi hết cuộc đời nha vợ ❤️
+						</p>
 					</div>
 				</figcaption>
 			</figure>
@@ -58,17 +60,17 @@
 				<figcaption>
 					<h2 class="photostack-title"></h2>
 					<div class="photostack-back">
-						<p>Mình cùng nắm tay đi hết cuộc đời nha vợ 😍</p>
+						<p>Lời cuối cùng chồng muốn nói là ....</p>
 					</div>
 				</figcaption>
 			</figure>
 			<figure>
-				<a href="http://goo.gl/Ms7VDl" class="photostack-img"><img src="img/6.jpg" width="241" height="241px"
+				<a href="#" class="photostack-img"><img src="img/6.jpg" width="241" height="241px"
 						alt="img06" /></a>
 				<figcaption>
 					<h2 class="photostack-title"></h2>
 					<div class="photostack-back">
-						<p>Yêu vợ nhất trên đời 😘</p>
+						<p>CHỒNG YÊU VỢ ❤️❤️❤️</p>
 					</div>
 				</figcaption>
 			</figure>
