Update home page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <!-- TITLE -->
-    <title>&#128157; Quà tặng em</title>
+    <title>&#128157; Sinh Nhật Vui Vẻ Vợ Nha</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon"
@@ -121,7 +121,8 @@
                 });
 
                 function newTyped() {
-                    /* A new typed object */ }
+                    /* A new typed object */
+                }
 
                 function foo() {
                     console.log("Callback");
@@ -132,7 +133,7 @@
                     alt='For My Love' height="100%" />
                 <div class="tree">
                     <img src="img/tree.png" alt="">
-                    <p style="font-size: 20px; color: #ff0066">CHÚC VỢ YÊU SINH NHẬT VUI VẺ 💋</p>                    
+                    <p style="font-size: 20px; color: #ff0066">CHÚC VỢ YÊU SINH NHẬT VUI VẺ 💋</p>
                 </div>
                 <br />
             </div>
@@ -146,96 +147,97 @@
             <div class="video-background">
             </div>
 
-        <style>
-            .clearfix:after,
-                {
-                clear: both;
-            }
+            <style>
+                .clearfix:after,
+                    {
+                    clear: both;
+                }
 
-            .couple {
-                width: 70%;
-            }
-        </style>
+                .couple {
+                    width: 70%;
+                }
+            </style>
 
-        <!-- COUPLE -->
-        <center>
-            <div class="couple clearfix">
-                <div class="couple-block first-block">
-                    <div class="top-block">
-                        <div class="name">
-                            <!-- Nam -->
-                            <h2 class="male">Chồng</h2>
-                            <p>Người luôn yêu thương và trân trọng và luôn mong muốn vợ sẽ được hạnh phúc</p>
+            <!-- COUPLE -->
+            <center>
+                <div class="couple clearfix">
+                    <div class="couple-block first-block">
+                        <div class="top-block">
+                            <div class="name">
+                                <!-- Nam -->
+                                <h2 class="male">Chồng</h2>
+                                <p>Người luôn yêu thương và trân trọng và luôn mong muốn vợ sẽ được hạnh phúc</p>
+                            </div>
+
+                            <div class="photo">
+                                <img src="img/authors/author.jpg" alt="" width="120" height="110">
+                            </div>
                         </div>
-
-                        <div class="photo">
-                            <img src="img/authors/author.jpg" alt="" width="120" height="110">
+                        <!-- Mổ tả -->
+                        <div class="bottom-block" style="font-size:16px">
+                            <p></p>
                         </div>
                     </div>
-                    <!-- Mổ tả -->
-                    <div class="bottom-block" style="font-size:16px">
-                        <p></p>
+
+                    <div class="heart" style="margin-bottom:-100px">
+                        <img id="heart" src="img/heart_couple.png" alt="">
+                    </div>
+
+                    <div class="couple-block second-block">
+                        <div class="top-block">
+                            <div class="name">
+                                <!-- nữ -->
+                                <h2 class="female">Vợ Yêu</h2>
+                                <p>Người con gái mạnh mẽ, thông minh, xinh đẹp mà chồng sẽ yêu thương suốt cuộc đời này
+                                </p>
+                            </div>
+                            <div class="photo">
+                                <img src="img/authors/vo_yeu.jpg" width="110px" height="110px" width="100" height="100">
+                            </div>
+                        </div>
+                        <div class="bottom-block" style="font-size:16px">
+                            <p></p>
+                        </div>
                     </div>
                 </div>
 
-                <div class="heart" style="margin-bottom:-100px">
-                    <img id="heart" src="img/heart_couple.png" alt="">
+                <!-- COUNT UP -->
+                <div id="center"></div>
+                <div id="TextCounter" style="color:white;background:url('img/tiny_heart.gif');"><strong>Đã</strong>
+                    <span id="counter">
+                        <script type="text/javascript">
+                            // January: tháng 1
+                            // February: tháng 2
+                            // March: tháng 3
+                            // April: tháng 4
+                            // May: tháng 5
+                            // June: tháng 6
+                            // July: tháng 7
+                            // August: tháng 8
+                            // September: tháng 9
+                            // October: tháng 10
+                            // November: tháng 11
+                            // December: tháng 12
+
+                            // ************* Ngày gặp nhau *************
+                            new CountUp('February 27 2020 8:00:00', 'counter', "");
+                        </script>
+                    </span><strong>Kể từ ngày mình yêu nhau</strong>
                 </div>
-
-                <div class="couple-block second-block">
-                    <div class="top-block">
-                        <div class="name">
-                            <!-- nữ -->
-                            <h2 class="female">Vợ Yêu</h2>
-                            <p>Người con gái mạnh mẽ, thông minh, xinh đẹp mà chồng sẽ yêu thương suốt cuộc đời này</p>
-                        </div>
-                        <div class="photo">
-                            <img src="img/authors/vo_yeu.jpg" width="110px" height="110px" width="100" height="100">
-                        </div>
-                    </div>
-                    <div class="bottom-block" style="font-size:16px">
-                        <p></p>
-                    </div>
-                </div>
-            </div>
-
-            <!-- COUNT UP -->
-            <div id="center"></div>
-            <div id="TextCounter" style="color:white;background:url('img/tiny_heart.gif');"><strong>Đã</strong> <span
-                    id="counter">
-                    <script type="text/javascript">
-                        // January: tháng 1
-                        // February: tháng 2
-                        // March: tháng 3
-                        // April: tháng 4
-                        // May: tháng 5
-                        // June: tháng 6
-                        // July: tháng 7
-                        // August: tháng 8
-                        // September: tháng 9
-                        // October: tháng 10
-                        // November: tháng 11
-                        // December: tháng 12
-
-                        // ************* Ngày gặp nhau *************
-                        new CountUp('February 27 2020 8:00:00', 'counter', "");
-                    </script>
-                </span><strong>Kể từ ngày mình yêu nhau</strong>
-            </div>
-            <a href="#gallery">
-                <h1 style="color:white" id="muiten">&#10165;</h1>
-            </a>
-            <i id="click">Click để xem tiếp</i>
-        </center>
-    </div>
-
-    <!-- CONTENT 3 / Dòng Thời gian -->
-    <div class="section" id="section3">
-        <div class="intro">
-            <iframe style="border:none;width:100%;height:100vh" src="gallery.html"></iframe>
-
+                <a href="#gallery">
+                    <h1 style="color:white" id="muiten">&#10165;</h1>
+                </a>
+                <i id="click">Click để xem tiếp</i>
+            </center>
         </div>
-    </div>
+
+        <!-- CONTENT 3 / Dòng Thời gian -->
+        <div class="section" id="section3">
+            <div class="intro">
+                <iframe style="border:none;width:100%;height:100vh" src="gallery.html"></iframe>
+
+            </div>
+        </div>
     </div>
     <!--Style-->
 
